edited lab3 and did half of childrenapp

--- a/lab3/lab3.html
+++ b/lab3/lab3.html
@@ -18,7 +18,9 @@
     <section class = "headerNav">
         <header class = "header-container">
             <div>Javascript</div>
-
+            <div>Home</div>
+            <div>News</div>
+            <div>Logout</div>   
         </header>    
 
         <div class = "navMenu">
