--- a/childrenapp/childrenapp.html
+++ b/childrenapp/childrenapp.html
@@ -33,18 +33,38 @@
     <section class = "grid-container">
         <div class = "card">
             <a href="numbers.html"><img src="numbers.png" alt="Numbers"></a>
-            <h2 class = "numbers">Learn and practice your numbers from 1-10!</h2>
         </div>
         <div class = "card">
-            <a href="addition.html"><img src="addition.jpg" alt="Numbers"></a>
+            <a href="colors.html"><img src="learningcolors.png" alt="Colors"></a>
             <div class = "card-content">
             </div>
         </div>
     </section>
     <!-- Footer -->
     <footer class = "footer" id = "footer">
-        
+        <div class = "column">
+            <h2>Contact us</h2>
+
+            <a href="mailto:justenkaiz@gmail.com" class = "contact">
+                <img  class = "icon" src="gmail.svg" alt="gmail icon">
+                Justen Jiang
+            </a>
+            <div>
+                <a href="tel:+1 202-918-2132" class = "contact"><img src="telephone.svg" alt="telephone icon" class = "icon">1 (202)-918-2132</a>
+            </div>
+        </div>
+
+        <div class = "column">
+            <h2>Follow us</h2>
+
+            <a href="https://www.facebook.com/QueensboroughCUNY" target="_blank" rel="noopener noreferrer">
+                <img  class = "icon" src="facebook.svg" alt="facebook icon">
+            </a>
+
+            <a href="https://www.instagram.com/queensboroughcc_cuny/?hl=en" target="_blank" rel="noopener noreferrer">
+                <img class = "icon" src="instagram.svg" alt="instagram icon">
+            </a>
+        </div>
     </footer>
-    <script src = "script.js"></script>
 </body>
 </html>
