--- a/childrenapp/numbers.html
+++ b/childrenapp/numbers.html
@@ -28,32 +28,139 @@
     <h1 class = "number-header">To begin learning, Click on a number below:</h1>
 
     <div class = "grid-numbers">
-        <div class = "number-card"><img src="numbers/one.png" alt="one"></div>
-        <div class = "number-card"><img src="numbers/two.png" alt="two"></div>
-        <div class = "number-card"><img src="numbers/three.png" alt="three"></div>
-        <div class = "number-card"><img src="numbers/four.png" alt="four"></div>
-        <div class = "number-card"><img src="numbers/five.png" alt="five"></div>       
-        <div class = "number-card"><img src="numbers/six.png" alt="six"></div>
-        <div class = "number-card"><img src="numbers/seven.png" alt="seven"></div>
-        <div class = "number-card"><img src="numbers/eight.png" alt="eight"></div>
-        <div class = "number-card"><img src="numbers/nine.png" alt="nine"></div>
-        <div class = "number-card"><img src="numbers/ten.png" alt="ten"></div>   
+        <div class = "number-card one"><img src="numbers/one.png" alt="one"></div>
+        <div class = "number-card two"><img src="numbers/two.png" alt="two"></div>
+        <div class = "number-card three"><img src="numbers/three.png" alt="three"></div>
+        <div class = "number-card four"><img src="numbers/four.png" alt="four"></div>
+        <div class = "number-card five"><img src="numbers/five.png" alt="five"></div>       
+        <div class = "number-card six"><img src="numbers/six.png" alt="six"></div>
+        <div class = "number-card seven"><img src="numbers/seven.png" alt="seven"></div>
+        <div class = "number-card eight"><img src="numbers/eight.png" alt="eight"></div>
+        <div class = "number-card nine"><img src="numbers/nine.png" alt="nine"></div>
+        <div class = "number-card ten"><img src="numbers/ten.png" alt="ten"></div>   
     </div>
 
     <!-- MODAL WINDOW 1-->
-    <section class = "modalwindow">
+    <section class = "one-modal modal">
         <div class = "modalcontent">
             <section class = "modal-header">
                 <div><img src="numbers/one.png" alt="one"></div>
                 <div><header class = "closemodal">X</header></div>                
             </section>
 
-            <p>One Apple</p>
-            <audio controls><source src = "audio_files/1.wav" type = "audio/wav"></audio>            
+            <p>One</p>
+            <audio controls><source src = "audio_files/1.mp3" type = "audio/mp3"></audio>            
         </div>
     </section>
-  
+    <!-- MODAL WINDOW 2-->
+    <section class = "two-modal modal">
+        <div class = "modalcontent">
+            <section class = "modal-header">
+                <div><img src="numbers/two.png" alt="two"></div>
+                <div><header class = "closemodal">X</header></div>                
+            </section>
 
-    <script src="script.js"></script>
+            <p>Two</p>
+            <audio controls><source src = "audio_files/2.mp3" type = "audio/mp3"></audio>            
+        </div>
+    </section>
+    <!-- MODAL WINDOW 3-->
+    <section class = "three-modal modal">
+        <div class = "modalcontent">
+            <section class = "modal-header">
+                <div><img src="numbers/three.png" alt="three"></div>
+                <div><header class = "closemodal">X</header></div>                
+            </section>
+
+            <p>Three</p>
+            <audio controls><source src = "audio_files/3.mp3" type = "audio/mp3"></audio>            
+        </div>
+    </section>
+    <!-- MODAL WINDOW 4-->
+    <section class = "four-modal modal">
+        <div class = "modalcontent">
+            <section class = "modal-header">
+                <div><img src="numbers/four.png" alt="four"></div>
+                <div><header class = "closemodal">X</header></div>                
+            </section>
+
+            <p>Four</p>
+            <audio controls><source src = "audio_files/4.mp3" type = "audio/mp3"></audio>            
+        </div>
+    </section>
+    <!-- MODAL WINDOW 5-->
+    <section class = "five-modal modal">
+        <div class = "modalcontent">
+            <section class = "modal-header">
+                <div><img src="numbers/five.png" alt="five"></div>
+                <div><header class = "closemodal">X</header></div>                
+            </section>
+
+            <p>Five</p>
+            <audio controls><source src = "audio_files/5.mp3" type = "audio/mp3"></audio>            
+        </div>
+    </section>
+    <!-- MODAL WINDOW 6-->
+    <section class = "six-modal modal">
+        <div class = "modalcontent">
+            <section class = "modal-header">
+                <div><img src="numbers/six.png" alt="six"></div>
+                <div><header class = "closemodal">X</header></div>                
+            </section>
+
+            <p>Six</p>
+            <audio controls><source src = "audio_files/6.mp3" type = "audio/mp3"></audio>            
+        </div>
+    </section>
+    <!-- MODAL WINDOW 7-->
+    <section class = "seven-modal modal">
+        <div class = "modalcontent">
+            <section class = "modal-header">
+                <div><img src="numbers/seven.png" alt="seven"></div>
+                <div><header class = "closemodal">X</header></div>                
+            </section>
+
+            <p>Seven</p>
+            <audio controls><source src = "audio_files/7.mp3" type = "audio/mp3"></audio>            
+        </div>
+    </section>
+    <!-- MODAL WINDOW 8-->
+    <section class = "eight-modal modal">
+        <div class = "modalcontent">
+            <section class = "modal-header">
+                <div><img src="numbers/eight.png" alt="eight"></div>
+                <div><header class = "closemodal">X</header></div>                
+            </section>
+
+            <p>Eight</p>
+            <audio controls><source src = "audio_files/8.mp3" type = "audio/mp3"></audio>            
+        </div>
+    </section>
+    <!-- MODAL WINDOW 9-->
+    <section class = "nine-modal modal">
+        <div class = "modalcontent">
+            <section class = "modal-header">
+                <div><img src="numbers/nine.png" alt="nine"></div>
+                <div><header class = "closemodal">X</header></div>                
+            </section>
+
+            <p>Nine</p>
+            <audio controls><source src = "audio_files/9.mp3" type = "audio/mp3"></audio>            
+        </div>
+    </section>
+    <!-- MODAL WINDOW 10-->
+    <section class = "ten-modal modal">
+        <div class = "modalcontent">
+            <section class = "modal-header">
+                <div><img src="numbers/ten.png" alt="ten"></div>
+                <div><header class = "closemodal">X</header></div>                
+            </section>
+
+            <p>Ten</p>
+            <audio controls><source src = "audio_files/10.mp3" type = "audio/mp3"></audio>            
+        </div>
+    </section>
+
+    <script src="numbers.js"></script>
 </body>
 </html>
