--- a/childrenapp/colors.html
+++ b/childrenapp/colors.html
@@ -50,5 +50,32 @@
         </div>
     </section>
     <script src="script.js"></script>
+
+    <!-- Footer -->
+    <footer class = "footer" id = "footer">
+        <div class = "column">
+            <h2>Contact us</h2>
+
+            <a href="mailto:justenkaiz@gmail.com" class = "contact">
+                <img  class = "icon" src="gmail.svg" alt="gmail icon">
+                Justen Jiang
+            </a>
+            <div>
+                <a href="tel:+1 202-918-2132" class = "contact"><img src="telephone.svg" alt="telephone icon" class = "icon">1 (202)-918-2132</a>
+            </div>
+        </div>
+
+        <div class = "column">
+            <h2>Follow us</h2>
+
+            <a href="https://www.facebook.com/QueensboroughCUNY" target="_blank" rel="noopener noreferrer">
+                <img  class = "icon" src="facebook.svg" alt="facebook icon">
+            </a>
+
+            <a href="https://www.instagram.com/queensboroughcc_cuny/?hl=en" target="_blank" rel="noopener noreferrer">
+                <img class = "icon" src="instagram.svg" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
