--- a/childrenapp/childrenapp.html
+++ b/childrenapp/childrenapp.html
@@ -42,7 +42,7 @@
     </section>
     <!-- Footer -->
     <footer class = "footer" id = "footer">
-        <div class = "column">
+        <div class = "column contact">
             <h2>Contact us</h2>
 
             <a href="mailto:justenkaiz@gmail.com" class = "contact">
@@ -51,7 +51,11 @@
             </a>
             <div>
                 <a href="tel:+1 202-918-2132" class = "contact"><img src="telephone.svg" alt="telephone icon" class = "icon">1 (202)-918-2132</a>
-            </div>
+            </div>            
+        </div>
+        
+        <div class = "column">
+            <a href="contact.html"><button>REQUEST FORM</button></a>
         </div>
 
         <div class = "column">
@@ -66,5 +70,6 @@
             </a>
         </div>
     </footer>
+    <script src = "script.js"></script>
 </body>
 </html>
