--- a/childrenapp/colors.html
+++ b/childrenapp/colors.html
@@ -53,7 +53,7 @@
 
     <!-- Footer -->
     <footer class = "footer" id = "footer">
-        <div class = "column">
+        <div class = "column contact">
             <h2>Contact us</h2>
 
             <a href="mailto:justenkaiz@gmail.com" class = "contact">
@@ -62,7 +62,11 @@
             </a>
             <div>
                 <a href="tel:+1 202-918-2132" class = "contact"><img src="telephone.svg" alt="telephone icon" class = "icon">1 (202)-918-2132</a>
-            </div>
+            </div>            
+        </div>
+        
+        <div class = "column">
+            <a href="contact.html"><button>REQUEST FORM</button></a>
         </div>
 
         <div class = "column">
