98% done with childrenapp

--- a/childrenapp/colors.html
+++ b/childrenapp/colors.html
@@ -12,9 +12,7 @@
     <!-- Navbar -->
     <section class = "headerNav">
         <header class = "header-container">
-            <div>1st Grade Learning</div>
-            <div><a href="childrenapp.html">Home</a></div>
-            <div><a href="#footer">Contact Us</a></div>  
+            <div><a href="childrenapp.html">Go Back</a></div>
         </header>
 
         <div class = "navMenu">
@@ -37,19 +35,79 @@
     </div>
 
 
-    <!-- MODAL WINDOW 1-->
-    <section class = "modalwindow">
+    <!-- MODAL WINDOW RED -->
+    <section class = "red-modal modalwindow">
         <div class = "modalcontent">
             <section class = "modal-header">
                 <div><img src="colors/red.png" alt="red"></div>
                 <div><header class = "closemodal">X</header></div>                
             </section>
 
-            <p>Red</p>
+            <h2>Red</h2>
             <audio controls><source src = "audio_files/Red.mp3" type = "audio/mp3"></audio>            
         </div>
     </section>
-    <script src="script.js"></script>
+
+    <!-- MODAL WINDOW ORANGE -->
+    <section class = "orange-modal modalwindow">
+        <div class = "modalcontent">
+            <section class = "modal-header">
+                <div><img src="colors/orange.png" alt="orange"></div>
+                <div><header class = "closemodal">X</header></div>                
+            </section>
+
+            <h2>Orange</h2>
+            <audio controls><source src = "audio_files/Orange.mp3" type = "audio/mp3"></audio>            
+        </div>
+    </section>
+    <!-- MODAL WINDOW YELLOW -->
+    <section class = "yellow-modal modalwindow">
+        <div class = "modalcontent">
+            <section class = "modal-header">
+                <div><img src="colors/yellow.png" alt="yellow"></div>
+                <div><header class = "closemodal">X</header></div>                
+            </section>
+
+            <h2>Yellow</h2>
+            <audio controls><source src = "audio_files/Yellow.mp3" type = "audio/mp3"></audio>            
+        </div>
+    </section>
+    <!-- MODAL WINDOW GREEN-->
+    <section class = "green-modal modalwindow">
+        <div class = "modalcontent">
+            <section class = "modal-header">
+                <div><img src="colors/green.png" alt="green"></div>
+                <div><header class = "closemodal">X</header></div>                
+            </section>
+
+            <h2>Green</h2>
+            <audio controls><source src = "audio_files/Green.mp3" type = "audio/mp3"></audio>            
+        </div>
+    </section>
+    <!-- MODAL WINDOW BLUE-->
+    <section class = "blue-modal modalwindow">
+        <div class = "modalcontent">
+            <section class = "modal-header">
+                <div><img src="colors/blue.png" alt="blue"></div>
+                <div><header class = "closemodal">X</header></div>                
+            </section>
+
+            <h2>Blue</h2>
+            <audio controls><source src = "audio_files/Blue.mp3" type = "audio/mp3"></audio>            
+        </div>
+    </section>
+    <!-- MODAL WINDOW 6-->
+    <section class = "purple-modal modalwindow">
+        <div class = "modalcontent">
+            <section class = "modal-header">
+                <div><img src="colors/purple.png" alt="purple"></div>
+                <div><header class = "closemodal">X</header></div>                
+            </section>
+
+            <h2>Purple</h2>
+            <audio controls><source src = "audio_files/Purple.mp3" type = "audio/mp3"></audio>            
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class = "footer" id = "footer">
@@ -81,5 +139,7 @@
             </a>
         </div>
     </footer>
+
+    <script src="colors.js"></script>
 </body>
 </html>
