--- a/childrenapp/numbers.html
+++ b/childrenapp/numbers.html
@@ -12,10 +12,9 @@
     <!-- Navbar -->
     <section class = "headerNav">
         <header class = "header-container">
-            <div>1st Grade Learning</div>
-            <div><a href="childrenapp.html">Home</a></div>
-            <div><a href="#footer">Contact Us</a></div>  
+            <div><a href="childrenapp.html">Go Back</a></div>
         </header>
+
 
         <div class = "navMenu">
             <!-- <div class = "menubtn">Menu<span></span> &#9776;</div>-->
@@ -41,129 +40,129 @@
     </div>
 
     <!-- MODAL WINDOW 1-->
-    <section class = "one-modal modal">
+    <section class = "one-modal modalwindow">
         <div class = "modalcontent">
             <section class = "modal-header">
                 <div><img src="numbers/one.png" alt="one"></div>
                 <div><header class = "closemodal">X</header></div>                
             </section>
 
-            <p>One</p>
+            <h2>One</h2>
             <audio controls><source src = "audio_files/1.mp3" type = "audio/mp3"></audio>            
         </div>
     </section>
     <!-- MODAL WINDOW 2-->
-    <section class = "two-modal modal">
+    <section class = "two-modal modalwindow">
         <div class = "modalcontent">
             <section class = "modal-header">
                 <div><img src="numbers/two.png" alt="two"></div>
                 <div><header class = "closemodal">X</header></div>                
             </section>
 
-            <p>Two</p>
+            <h2>Two</h2>
             <audio controls><source src = "audio_files/2.mp3" type = "audio/mp3"></audio>            
         </div>
     </section>
     <!-- MODAL WINDOW 3-->
-    <section class = "three-modal modal">
+    <section class = "three-modal modalwindow">
         <div class = "modalcontent">
             <section class = "modal-header">
                 <div><img src="numbers/three.png" alt="three"></div>
                 <div><header class = "closemodal">X</header></div>                
             </section>
 
-            <p>Three</p>
+            <h2>Three</h2>
             <audio controls><source src = "audio_files/3.mp3" type = "audio/mp3"></audio>            
         </div>
     </section>
     <!-- MODAL WINDOW 4-->
-    <section class = "four-modal modal">
+    <section class = "four-modal modalwindow">
         <div class = "modalcontent">
             <section class = "modal-header">
                 <div><img src="numbers/four.png" alt="four"></div>
                 <div><header class = "closemodal">X</header></div>                
             </section>
 
-            <p>Four</p>
+            <h2>Four</h2>
             <audio controls><source src = "audio_files/4.mp3" type = "audio/mp3"></audio>            
         </div>
     </section>
     <!-- MODAL WINDOW 5-->
-    <section class = "five-modal modal">
+    <section class = "five-modal modalwindow">
         <div class = "modalcontent">
             <section class = "modal-header">
                 <div><img src="numbers/five.png" alt="five"></div>
                 <div><header class = "closemodal">X</header></div>                
             </section>
 
-            <p>Five</p>
+            <h2>Five</h2>
             <audio controls><source src = "audio_files/5.mp3" type = "audio/mp3"></audio>            
         </div>
     </section>
     <!-- MODAL WINDOW 6-->
-    <section class = "six-modal modal">
+    <section class = "six-modal modalwindow">
         <div class = "modalcontent">
             <section class = "modal-header">
                 <div><img src="numbers/six.png" alt="six"></div>
                 <div><header class = "closemodal">X</header></div>                
             </section>
 
-            <p>Six</p>
+            <h2>Six</h2>
             <audio controls><source src = "audio_files/6.mp3" type = "audio/mp3"></audio>            
         </div>
     </section>
     <!-- MODAL WINDOW 7-->
-    <section class = "seven-modal modal">
+    <section class = "seven-modal modalwindow">
         <div class = "modalcontent">
             <section class = "modal-header">
                 <div><img src="numbers/seven.png" alt="seven"></div>
                 <div><header class = "closemodal">X</header></div>                
             </section>
 
-            <p>Seven</p>
+            <h2>Seven</h2>
             <audio controls><source src = "audio_files/7.mp3" type = "audio/mp3"></audio>            
         </div>
     </section>
     <!-- MODAL WINDOW 8-->
-    <section class = "eight-modal modal">
+    <section class = "eight-modal modalwindow">
         <div class = "modalcontent">
             <section class = "modal-header">
                 <div><img src="numbers/eight.png" alt="eight"></div>
                 <div><header class = "closemodal">X</header></div>                
             </section>
 
-            <p>Eight</p>
+            <h2>Eight</h2>
             <audio controls><source src = "audio_files/8.mp3" type = "audio/mp3"></audio>            
         </div>
     </section>
     <!-- MODAL WINDOW 9-->
-    <section class = "nine-modal modal">
+    <section class = "nine-modal modalwindow">
         <div class = "modalcontent">
             <section class = "modal-header">
                 <div><img src="numbers/nine.png" alt="nine"></div>
                 <div><header class = "closemodal">X</header></div>                
             </section>
 
-            <p>Nine</p>
+            <h2>Nine</h2>
             <audio controls><source src = "audio_files/9.mp3" type = "audio/mp3"></audio>            
         </div>
     </section>
     <!-- MODAL WINDOW 10-->
-    <section class = "ten-modal modal">
+    <section class = "ten-modal modalwindow">
         <div class = "modalcontent">
             <section class = "modal-header">
                 <div><img src="numbers/ten.png" alt="ten"></div>
                 <div><header class = "closemodal">X</header></div>                
             </section>
 
-            <p>Ten</p>
+            <h2>Ten</h2>
             <audio controls><source src = "audio_files/10.mp3" type = "audio/mp3"></audio>            
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class = "footer" id = "footer">
-        <div class = "column">
+    <footer class = "footer notenough" id = "footer">
+        <div class = "column contact">
             <h2>Contact us</h2>
 
             <a href="mailto:justenkaiz@gmail.com" class = "contact">
@@ -172,7 +171,11 @@
             </a>
             <div>
                 <a href="tel:+1 202-918-2132" class = "contact"><img src="telephone.svg" alt="telephone icon" class = "icon">1 (202)-918-2132</a>
-            </div>
+            </div>            
+        </div>
+        
+        <div class = "column">
+            <a href="contact.html"><button>REQUEST FORM</button></a>
         </div>
 
         <div class = "column">
